--- a/backend/app/.env.example
+++ b/backend/app/.env.example
@@ -22,8 +22,8 @@ ACCESS_TOKEN_EXPIRE_MINUTES=1440
 # File Upload
 # ================================
 UPLOAD_DIR=uploads
-MAX_FILE_SIZE=10485760
-ALLOWED_EXTENSIONS=.jpg,.jpeg,.png,.tiff,.tif
+MAX_FILE_SIZE=52428800
+ALLOWED_EXTENSIONS=.jpg,.jpeg,.png,.tiff,.tif,.pdf,.docx,.doc,.xlsx,.xls
 
 # ================================
 # CORS
